force-app/main/default/objects/Apttus__DocAssemblyComponent__c/Apttus__DocAssemblyComponent__c.object-meta.xml
<CustomObject>
    <description>Represents a single component in a document assembly rule</description>
    <label>Doc Assembly Component</label>
    <nameField>
        <displayFormat>AC-{0000000000}</displayFormat>
        <label>Component Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Doc Assembly Components</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>