force-app/main/default/objects/Apttus__DocAssemblyComponent__c/fields/Apttus__AttachmentId__c.field-meta.xml
<CustomField>
    <fullName>Apttus__AttachmentId__c</fullName>
    <description>Id of the attachment</description>
    <inlineHelpText>Id of the attachment</inlineHelpText>
    <label>Attachment Id</label>
    <length>25</length>
    <type>Text</type>
</CustomField>