force-app/main/default/objects/Apttus__DocAssemblyComponent__c/fields/Apttus__ComponentType__c.field-meta.xml
<CustomField>
    <fullName>Apttus__ComponentType__c</fullName>
    <description>Type of the component. Clause considers clause document, Attachment (Id) considers a hardcoded attachment id, Attachment (Object/Field) considers attachment id in a field, Parent (Object/Field) considers the first attachment in the parent represented by the field, Content (Object/Field) considers the raw content of that field.</description>
    <inlineHelpText>Clause = clause document, Attachment (Id) = hardcoded attachment id, Attachment (Object/Field) = attachment id in a field, Parent (Object/Field) = first attachment in the parent represented by the field, Content (Object/Field) =  raw content of the field.</inlineHelpText>
    <label>Component Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Clause</fullName>
                <default>true</default>
                <label>Clause</label>
            </value>
            <value>
                <fullName>Attachment (Id)</fullName>
            </value>
            <value>
                <fullName>Attachment (Object/Field)</fullName>
            </value>
            <value>
                <fullName>Parent (Object/Field)</fullName>
            </value>
            <value>
                <fullName>Content (Object/Field)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>