force-app/main/default/objects/Apttus__DocAssemblyComponent__c/fields/Apttus__ContentFieldType__c.field-meta.xml
<CustomField>
    <fullName>Apttus__ContentFieldType__c</fullName>
    <description>Type of the content field when the ComponentType is Content (Object/Field)</description>
    <inlineHelpText>Type of the content field when the ComponentType is Content (Object/Field)</inlineHelpText>
    <label>Content Field Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>HTML</fullName>
            </value>
            <value>
                <fullName>IMAGE</fullName>
            </value>
            <value>
                <fullName>URL</fullName>
            </value>
            <value>
                <fullName>TEXT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>