force-app/main/default/objects/Apttus__DocAssemblyComponent__c/fields/Apttus__ContentId__c.field-meta.xml
<CustomField>
    <fullName>Apttus__ContentId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the content for the component</description>
    <inlineHelpText>ID of the content for the component</inlineHelpText>
    <label>Content</label>
    <referenceTo>Apttus__APTS_Template__c</referenceTo>
    <relationshipLabel>Doc Assembly Components</relationshipLabel>
    <relationshipName>DocAssemblyComponents</relationshipName>
    <type>Lookup</type>
</CustomField>