force-app/main/default/objects/Apttus__DocAssemblyComponent__c/fields/Apttus__FieldName__c.field-meta.xml
<CustomField>
    <fullName>Apttus__FieldName__c</fullName>
    <description>Name of the field that leads to the target component</description>
    <inlineHelpText>Name of the field that leads to the target component</inlineHelpText>
    <label>Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>