force-app/main/default/objects/Apttus__DocAssemblyComponent__c/fields/Apttus__Sequence__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Sequence__c</fullName>
    <description>The component sequence</description>
    <inlineHelpText>The component sequence</inlineHelpText>
    <label>Sequence</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>