force-app/main/default/objects/Apttus__DocAssemblyComponent__c/fields/Apttus__Type__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Type__c</fullName>
    <description>The component type</description>
    <inlineHelpText>The component type</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Logo</fullName>
            </value>
            <value>
                <fullName>Header</fullName>
            </value>
            <value>
                <fullName>Footer</fullName>
            </value>
            <value>
                <fullName>Terms and Conditions</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>